# project-management-core

./: .gitignore  README.md  env.sh  main.py  pyproject.toml  requirements.txt
project_management_core/domain/entities/: document.py  project.py  user.py
project_management_core/domain/repositories/: document_repository.py  project_repository.py  user_repository.py
project_management_core/domain/services/: __init__.py  document_repository.py  document_service.py  project_repository.py  project_service.py  user_repository.py  user_service.py
project_management_core/domain/value_objects/: email.py
project_management_core/infrastructure/: testing_module.py
project_management_core/infrastructure/repositories/db/: connection.py  db_repository.py  document_repository_impl.py  project_repository_impl.py  user_repository_impl.py
project_management_core/infrastructure/repositories/db/models/: db_models.py
project_management_core/infrastructure/repository/: connection.py
