[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-management-core"
version = "0.1.0a1"
description = "Core domain, value objects, and services for project management."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bartosz" }]
keywords = ["project-management", "domain-driven-design", "sqlalchemy"]
dependencies = [
  "SQLAlchemy>=2.0,<3",
  "pydantic>=2.0,<3",
  "bcrypt>=4.0,<5",
  "asyncpg>=0.29,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.12.11"
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["project_management_core*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
